<?xml version="1.0" encoding="utf-8"?>
<!-- Root ScrollView -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.courtcounter.MainActivity"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >
    <!-- Full layout container -->
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- Main game container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <!-- Player A column layout -->
            <LinearLayout
                style="@style/playerColumnStyle"
                >
                <!-- Player name TextView -->
                <TextView
                    style="@style/playerNameStyle"
                    android:text="@string/Team_A"
                    android:fontFamily="sans-serif-medium"
                    />
                <!-- Player A's generated number TextView -->
                <TextView
                    style="@style/generatedNumberStyle"
                    android:textAlignment="center"
                    android:id="@+id/random_string_A"
                    />
                <!-- Player A's score TextView -->
                <TextView
                    style="@style/scoreStyle"
                    android:id="@+id/team_a_score"
                    android:fontFamily="sans-serif-light"
                    />
                <!-- Player A's adding buttons -->
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/three_points"
                    android:onClick="threePoints"
                    android:background="@color/firyColor"
                    android:id="@+id/three_points_A"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/two_points"
                    android:onClick="twoPoints"
                    android:background="@color/mooColor"
                    android:id="@+id/two_points_A"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/free_throw"
                    android:onClick="freeThrow"
                    android:background="@color/meowColor"
                    android:id="@+id/one_point_A"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/feel_lucky"
                    android:onClick="checkZeroA"
                    android:background="@color/meLuckyColor"
                    android:id="@+id/zero_points_A"
                    />
                <!-- Player A's status TextView -->
                <TextView
                    style="@style/statusTextStyle"
                    android:textAlignment="center"
                    android:id="@+id/generatedA"
                    />
            <!-- End Player A column layout -->
            </LinearLayout>
            <!-- Divider -->
            <LinearLayout
                android:layout_width="@dimen/divider_width"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/medium_spacing"
                >
            <!-- End Divider -->
            </LinearLayout>
            <!-- Player B column layout -->
            <LinearLayout
                style="@style/playerColumnStyle"
                >
                <!-- Player name TextView -->
                <TextView
                    style="@style/playerNameStyle"
                    android:text="@string/Team_B"
                    android:fontFamily="sans-serif-medium"
                    />
                <!-- Player B's generated number TextView -->
                <TextView
                    style="@style/generatedNumberStyle"
                    android:textAlignment="center"
                    android:id="@+id/random_string_B"
                    />
                <!-- Player B's score TextView -->
                <TextView
                    style="@style/scoreStyle"
                    android:id="@+id/team_b_score"
                    android:fontFamily="sans-serif-light"
                    />
                <!-- Player B's adding buttons -->
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/three_points"
                    android:onClick="threePointsB"
                    android:background="@color/firyColor"
                    android:id="@+id/three_points_B"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/two_points"
                    android:onClick="twoPointsB"
                    android:background="@color/mooColor"
                    android:id="@+id/two_points_B"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/free_throw"
                    android:onClick="freeThrowB"
                    android:background="@color/meowColor"
                    android:id="@+id/one_point_B"
                    />
                <Button
                    style="@style/addButtonStyle"
                    android:text="@string/feel_lucky"
                    android:onClick="checkZeroB"
                    android:background="@color/meLuckyColor"
                    android:id="@+id/zero_points_B"
                    />
                <!-- Player B's status TextView -->
                <TextView
                    style="@style/statusTextStyle"
                    android:textAlignment="center"
                    android:id="@+id/generatedB"
                    />
            <!-- End Player B column layout -->
            </LinearLayout>
        <!-- End main game container -->
        </LinearLayout>
        <!-- Reset button layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/large_spacing"
            >
            <Button
                android:layout_width="@dimen/reset_button_size"
                android:layout_height="@dimen/reset_button_size"
                android:text="@string/reset"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="resetScore"
                android:background="@drawable/circle"
                />
        <!-- End reset button layout -->
        </RelativeLayout>
    <!-- End full layout container -->
    </LinearLayout>
<!-- End root ScrollView -->
</ScrollView>
